# DarkGeant4-HunterSullivan

./: CMakeLists.txt  README.md  basicrun.mac  main.cxx  vis.mac
config/: Config.lua  DetectorConfig.lua  Materials.lua  Particle_Data.txt  Particles.lua  config.lua
config/lib/: libdistribution.lua
config/module/ArgonCUBE/: Config.lua  (+3 more)
include/: ActionInitialization.hh  DetectorConstruction.hh  LuaPlugin.hh  Material.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  SteppingAction.hh  Utilities.hh
include/DetectorConstruction/: DetectorComponent.hh  DetectorComponentBox.hh  DetectorComponentCone.hh  DetectorComponentCylinder.hh  DetectorComponentEllipsoid.hh  DetectorComponentEllipticalCone.hh  DetectorComponentEllipticalTube.hh  DetectorComponentHyperbolicTube.hh  DetectorComponentParallelepiped.hh  DetectorComponentSolidSphere.hh  DetectorComponentSphericalShell.hh  DetectorComponentTetrahedra.hh  DetectorComponentTorus.hh  DetectorComponentTrapezoid.hh  DetectorComponentTwistedBox.hh  DetectorComponentZTwistedTrapezoid.hh  DetectorConstructionV2.hh
include/Fields/: EquationOfMotion.hh  MagneticField.hh  UniformEMField.hh
include/LuaPlugin/: ConfigLuaInstance.hh  DetectorConfigLuaInstance.hh  LuaInstance.hh  LuaPlugin.hh  MaterialConfigLuaInstance.hh  MaterialsConfigLuaInstance.hh  ParticlesConfigLuaInstance.hh
scripts/DarkGeant4HelperScripts/: Histograms.py  IonizationAndTreeBatch.sh  ParseSplitGeant4Output.py  SplitAndParseDarkGeantData.py  SplitGeant4Output.py
scripts/SunTracking/: CMakeLists.txt  README.md  main.cxx
scripts/SunTracking/include/: CoordinateCalculator.hh  EccentricAnomalyCalculator.hh  HorizonCalculator.hh  JulianDayCalculator.hh  RADecCalculator.hh  SunTracker.hh
scripts/SunTracking/src/: CoordinateCalculator.cxx  EccentricAnomalyCalculator.cxx  HorizonCalculator.cxx  JulianDayCalculator.cxx  RADecCalculator.cxx  SunTracker.cxx
scripts/corsika/: CorsikaToDGeant4Converter.cxx  ReadCorsikaParticles.cxx  ReadDAT.cxx  output
src/: ActionInitialization.cxx  DetectorConstruction.cxx  LuaPlugin.cxx  Material.cxx  PhysicsList.cxx  PrimaryGeneratorAction.cxx  SteppingAction.cxx  Utilities.cxx
src/DetectorConstruction/: DetectorComponent.cxx  DetectorComponentBox.cxx  DetectorComponentCone.cxx  DetectorComponentCylinder.cxx  DetectorComponentEllipsoid.cxx  DetectorComponentEllipticalCone.cxx  DetectorComponentEllipticalTube.cxx  DetectorComponentHyperbolicTube.cxx  DetectorComponentParallelepiped.cxx  DetectorComponentSolidSphere.cxx  DetectorComponentSphericalShell.cxx  DetectorComponentTetrahedra.cxx  DetectorComponentTorus.cxx  DetectorComponentTrapezoid.cxx  DetectorComponentTwistedBox.cxx  DetectorComponentZTwistedTrapezoid.cxx  DetectorConstructionV2.cxx
src/Fields/: .MagneticField.cxx.swp  EquationOfMotion.cxx  MagneticField.cxx  UniformEMField.cxx
src/LuaPlugin/: ConfigLuaInstance.cxx  DetectorConfigLuaInstance.cxx  LuaInstance.cxx  MaterialConfigLuaInstance.cxx  ParticlesConfigLuaInstance.cxx
(+44 files in other folders)
